<package>
  <name>ros_test</name>
  <version>0.0.1</version>
  <description>ROS Speed test</description>
  <author>Morten Kjaergaard</author>
  <maintainer email="none@none.com">Morten Kjaergaard</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>roscpp</run_depend>
  <export>
    <polygon_interface_package plugin="${prefix}/rectangle_plugin.xml" />
  </export>
</package>
